## -*- makefile -*-
##
## Process this file with automake to produce Makefile.in
##
## $Source:$
##
## $Id:$
##

AUTOMAKE_OPTIONS=foreign no-dependencies

EXTRA_DIST = initial.nocx.xml occampi.ldef mcsp.ldef rcxb.ldef guppy.ldef \
		avrasm.ldef eac.ldef traceslang.ldef trlang.ldef \
		occampi-newsyn.ldef mwsync.ldef \
		headers/atmega1280.inc headers/atmega1280-imap.inc


