## -*- makefile -*-
##
## Process this file with automake to produce Makefile.in
##
## $Source:$
##
## $Id:$
##

AUTOMAKE_OPTIONS=foreign no-dependencies

EXTRA_DIST = initial.nocx.xml occampi.ldef mcsp.ldef rcxb.ldef guppy.ldef \
		avrasm.ldef eac.ldef traceslang.ldef trlang.ldef \
		occampi-newsyn.ldef mwsync.ldef \
		cccsp/verb-header.h cccsp/guppy_cccsp_lib.c cccsp/api-call-chain cccsp/api-call-chain-ev3 \
		headers/atmega1280.inc headers/atmega1280-imap.inc headers/atmega328.inc headers/atmega328-imap.inc headers/atmega-spi.inc


