## -*- makefile -*-
##
## Process this file with automake to produce Makefile.in
##
## $Source:$
##
## $Id:$
##

AUTOMAKE_OPTIONS=foreign no-dependencies

EXTRA_DIST = test1.occ \
		test_n1.occ test_n2.occ test_n3.occ test_n4.occ test_n5.occ test_n6.occ \
		test_n7.occ test_n8.occ test_n9.occ test_n10.occ test_n11.occ test_n12.occ \
		test_n13.occ test_n14.occ test_n15.occ test_n16.occ test_n17.occ test_n18.occ \
		test_n19.occ test_n20.occ test_n21.occ test_n22.occ test_n23.occ test_n24.occ \
		test_n25.occ test_n26.occ test_n27.occ test_n28.occ test_n29.occ test_n30.occ \
		test_n31.occ \
		test_x1.occ test_x2.occ test_x3.occ test_x4.occ test_x5.occ test_x6.occ \
		test_x7.occ test_x8.occ \
		test_x12.occ test_x13.occ test_x14.occ test_x15.occ test_x16.occ \
		test_x17.occ test_x18.occ test_x19.occ \
		test_x20.occ test_x21.occ test_x22.occ test_x23.occ \
		test_x24.occ test_x25.occ test_x26.occ test_x27.occ test_x28.occ test_x29.occ \
		test_x30.occ test_x31.occ test_x32.occ test_x33.occ test_x34.occ test_x35.occ \
		test_x36.occ tesT_x37.occ test_x38.occ test_x39.occ \
		test_b1.bas test_b2.bas \
		test_c1.mcsp test_c2.mcsp test_c3.mcsp test_c4.mcsp test_c5.mcsp test_c6.mcsp \
		test_c7.mcsp test_c8.mcsp test_c9.mcsp test_c10.mcsp test_c11.mcsp

MOSTLYCLEANFILES = *.etc *.xml *.xlo *.o *.s *.xlb


